--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         * SITE_NAME：flot的个人网盘
         */
         window.GLOBAL_CONFIG = {
-            SCF_GATEWAY: "",
-            SITE_NAME: "FODI",
+            SCF_GATEWAY: "pan.flottant.workers.dev",
+            SITE_NAME: "flot的个人网盘",
             IS_CF: true
         };
         if (window.GLOBAL_CONFIG.SCF_GATEWAY.indexOf('workers') === -1) {
