--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         * SITE_NAME：flot的个人网盘
         */
         window.GLOBAL_CONFIG = {
-            SCF_GATEWAY: "pan.flottant.workers.dev",
+            SCF_GATEWAY: "https://pan.flottant.workers.dev/",
             SITE_NAME: "flot",
             IS_CF: true
         };
